manifests/mangrove.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mangrove
  namespace: kube-did
  labels:
    app: mangrove
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mangrove
  template:
    metadata:
      labels:
        app: mangrove
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: # 软策略
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - mangrove
      volumes:
        - name: config
          configMap:
            name: mangrove-config
      imagePullSecrets:
        - harbor-registry
      containers:
        - name: web
          image: harbor.peopledata.org.cn/htsc/mangrove:v0.0.1
          ports:
            - containerPort: 8081
              name: web
          livenessProbe:
            httpGet:
              path: /ping
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec: # 加了一个20s的宽限期，让我们的endpoints去有机会移出将要删除的Pod
                command: ["/bin/bash", "-c", "sleep 20"]
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config
              subPath: config
              mountPath: /src

---
apiVersion: v1
kind: Service
metadata:
  name: mangrove
  namespace: kube-did
  labels:
    app: mangrove
spec:
  selector:
    app: mangrove
  ports:
    - name: web
      port: 8081
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: mangrove
  name: mangrove
  namespace: kube-did
spec:
  ingressClassName: nginx
  rules:
    - host: cluster.peopledata.org.cn
      http:
        paths:
          - backend:
              service:
                name: mangrove
                port:
                  number: 8081
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cluster.peopledata.org.cn
      secretName: mangrove-tls
